# Computational-Intelligence---22-23

./: README.md  pyproject.toml
HillClimbing/: README.md  rastrigin_problem.ipynb
lab1/: README.md  lab1_notebook.ipynb
lab2/: README.md  lab2_notebook.ipynb
lab3/: README.md  lab3_nim.ipynb
